--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -66,7 +66,10 @@
                         Manage Existing Photos
                     </a>
                     <hr class="dropdown-divider">
-
+                    <a class="dropdown-item" href="{{ url_for('admin_bp.sst_make_page_cells') }}">
+                        Make Layout Cell Instances
+                    </a>
+                    <hr class="dropdown-divider">
                     <a class="dropdown-item" href="{{ url_for('admin_bp.sst_admin_calendar') }}">
                         Manage Calendar
                     </a>
