--- a/ssfl/templates/main/snippet_calendar.jinja2
+++ b/ssfl/templates/main/snippet_calendar.jinja2
@@ -1,10 +1,14 @@
-    <div class="title text-wrap">Upcoming Events</div>
-    <div>
-        {% for event in calendar.events %}
-            <div class="mt-3">
-                <p class="h5 font-weight-bold">{{ event.name }}</p>
-                <p class="my-0">{{ event.date }} {{ event.time }}</p>
-                <p class="my-0">{{ event.venue }}</p>
-            </div>
-        {% endfor %}
-    </div>
+<div class="title text-wrap">Upcoming Events</div>
+<div>
+    {% if calendar is defined %}
+        {% if calendar.events is defined %}
+            {% for event in calendar.events %}
+                <div class="mt-3">
+                    <p class="h5 font-weight-bold">{{ event.name }}</p>
+                    <p class="my-0">{{ event.date }} {{ event.time }}</p>
+                    <p class="my-0">{{ event.venue }}</p>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endif %}
+</div>
