--- a/ssfl/templates/base/carousel.jinja2
+++ b/ssfl/templates/base/carousel.jinja2
@@ -1,50 +1,42 @@
 {#<!-- Class devBorder and friends is in file 'mystyles.css' - comment in/out to toggle -->#}
-{% if True %}
-    <container class="CAROUSEL devborder container" {{ float_dir }}>
-        {% set carousel_id = unique_id_base + 'CARO' %}
-        <div class="row">
-            <div class="col">
-                <div id="{{ carousel_id }}" class="CAROUSEL2 devBorder2 carousel slide" data-ride="carousel"
-                     style="width: auto; height: auto;
-                             {% if carousel.background %}
-                                 background-color: {{ carousel.background }};
-                             {% endif %}">
-                    {% if carousel.title and carousel.title != 'NO NAME' %}
-                        <figcaption class="title {{ carousel.title_class }}">{{ carousel.title }}</figcaption>
-                    {% endif %}
-                    {% if (carousel.pictures | length) > 1 %}
-                        <ol class="carousel-indicators">
-                            {% for photo in carousel.pictures %}
-                                <li data-target="#{{ carousel_id }}" data-slide-to="{{ loop.index }}"
-                                    {% if loop.index == 0 %}class="active"{% endif %}></li>
-                            {% endfor %}
-                        </ol>
-                    {% endif %}
-                {# Used to have max-height setting which did not override such in lower level templates.??? #}
-                    <div class="CAROUSEL3 carousel-inner" role="listbox" data-interval="{{ carousel.rotation }}"
-                         data-wrap="True"
-                         style="alignment: center; ">
-                        {% for photo in carousel.pictures %}
-                            {% if loop.index == 1 %}
-                                {% set slide_active = 'active' %}
-                            {% else %}
-                                {% set slide_active = '' %}
-                            {% endif %}
-                            {% include 'base/carousel_pic.jinja2' %}
-                        {% endfor %}
-                    </div>
-                    {% if (carousel.pictures | length) > 1 %}
-                        <a class="carousel-control-prev" href="#{{ carousel_id }}" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#{{ carousel_id }}" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-    </container>
-{% endif %}
+{% set carousel_id = unique_id_base + 'CARO' %}
+<div id="{{ carousel_id }}" class="carousel slide float-right" data-ride="carousel"
+     style="width: auto; height: auto; padding: 15px;
+             {% if carousel.background %}
+                 background-color: {{ carousel.background }};
+             {% endif %}">
+    {% if carousel.title and carousel.title != 'NO NAME' %}
+        <figcaption class="title {{ carousel.title_class }}">{{ carousel.title }}</figcaption>
+    {% endif %}
+    {% if (carousel.pictures | length) > 1 %}
+        <ol class="carousel-indicators">
+            {% for photo in carousel.pictures %}
+                <li data-target="#{{ carousel_id }}" data-slide-to="{{ loop.index }}"
+                    {% if loop.index == 0 %}class="active"{% endif %}></li>
+            {% endfor %}
+        </ol>
+    {% endif %}
+    {# Used to have max-height setting which did not override such in lower level templates.??? #}
+    <div class="carousel-inner" role="listbox" data-interval="{{ carousel.rotation }}"
+         data-wrap="True"
+         style="alignment: center; ">
+        {% for photo in carousel.pictures %}
+            {% if loop.index == 1 %}
+                {% set slide_active = 'active' %}
+            {% else %}
+                {% set slide_active = '' %}
+            {% endif %}
+            {% include 'base/carousel_pic.jinja2' %}
+        {% endfor %}
+    </div>
+    {% if (carousel.pictures | length) > 1 %}
+        <a class="carousel-control-prev" href="#{{ carousel_id }}" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#{{ carousel_id }}" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    {% endif %}
+</div>
