--- a/ssfl/templates/grid_main/page.jinja2
+++ b/ssfl/templates/grid_main/page.jinja2
@@ -14,33 +14,35 @@
         {% set id_base_index = loop.index |string %}
         {% for gridClass, val in cell.items() %}
             {% set story = val.cell_content %}
-{# This div breaks the grid layout.  Are these classes and styles needed? #}
-{# <div class="{{ val.classes }} overflow-auto" style="{{ val.styles }}">#}
+            {# This div breaks the grid layout.  Are these classes and styles needed? #}
+            {# <div class="{{ val.classes }} overflow-auto" style="{{ val.styles }}">#}
             {% set unique_id_base =  'C' + id_base_index %}
             {% if val.cell_type == 'CALENDAR_SNIPPET' %}
-                {% set events = story.events %}      {# Set right component #}
-                <calendar class="calendar overflow-auto">
+                {% set events = story.events %}
+                <calendar class="{{ gridClass }} overflow-auto p-4">
                     {% include 'grid_main/snippet_calendar.jinja2' %}
                 </calendar>
             {% endif %}
             {% if val.cell_type == 'STORY' %}
-                <article class="main-content overflow-auto">
+                <article class="{{ gridClass }} overflow-auto p-4">
                     {% include 'main/full_story.jinja2' %}
                 </article>
             {% endif %}
             {% if val.cell_type == 'STORY_SNIPPET' %}
-                {% include 'main/snippet_story.jinja2' %}
+                {% include 'grid_main/snippet_story.jinja2' %}
             {% endif %}
             {% if val.cell_type == 'FULL_STORY' %}
-                <main-content class="main-content">
+                <main-content class="{{ gridClass }}">
                     {% include 'main/full_story.jinja2' %}
                 </main-content>
             {% endif %}
             {% if val.cell_type == 'SLIDESHOW_SNIPPET' %}
-                {% include 'main/snippet_slideshow.jinja2' %}
+                {% include 'main/snippet_carousel.jinja2' %}
             {% endif %}
             {% if val.cell_type == 'SLIDESHOW' %}
-                {% include 'main/snippet_slideshow.jinja2' %}
+                <article class="{{ gridClass }} overflow-auto p-4">
+                    {% include 'main/snippet_carousel.jinja2' %}
+                </article>
             {% endif %}
             {% if val.cell_type == 'CAROUSEL_SNIPPET' %}
                 {% include 'main/snippet_carousel.jinja2' %}
@@ -49,7 +51,7 @@
                 {% include 'main/snippet_carousel.jinja2' %}
             {% endif %}
             {% if val.cell_type == 'SIGN_SNIPPET' %}
-                <notice class="notice overflow-auto">
+                <notice class="{{ gridClass }} overflow-auto p-3">
                     {% include 'base/snippet_sign.jinja2' %}
                 </notice>
             {% endif %}
